Remove some egl related case for mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,21 +27,24 @@ include_directories(
 
 add_library(GLAD "thirdparty/src/glad.c")
 
-set(LIBS  ${GLFW3_LIBRARY} ${OpenGL_LIBRARY} GLAD)
+set(LIBS  ${GLFW3_LIBRARY} ${OpenGL_LIBRARY} GLAD )
 
 IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
     MESSAGE(STATUS "current platform: Linux ")
     set(LIBS ${LIBS} -ldl -lX11 -lEGL)
 ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 
+function(add_singlefile_exec)
+    add_executable( ${ARGN} ${ARGN}.cpp)
+    target_link_libraries(${ARGN} ${LIBS})
+endfunction(add_singlefile_exec)
+
 add_executable(${PROJECT_NAME} test.c )
 target_link_libraries(${PROJECT_NAME} ${LIBS})
 
-add_executable(triangle triangle.cpp)
-target_link_libraries(triangle ${LIBS})
+IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
+add_singlefile_exec(triangle_x11egl)
+add_singlefile_exec(surfaceless_test)
+ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 
-add_executable(triangle_egl triangle_x11egl.cpp)
-target_link_libraries(triangle_egl ${LIBS})
-
-add_executable(surfaceless_test surfaceless_test.cpp)
-target_link_libraries(surfaceless_test ${LIBS})
+add_singlefile_exec(triangle)
