add test if linker treated glFragDepth well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,3 +50,4 @@ ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 
 add_singlefile_exec(triangle)
 add_singlefile_exec(texture_test)
+add_singlefile_exec(frag_depth_test)
