--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,3 +51,4 @@ ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 add_singlefile_exec(triangle)
 add_singlefile_exec(texture_test)
 add_singlefile_exec(frag_depth_test)
+add_singlefile_exec(compute_test)
