--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,3 +52,4 @@ add_singlefile_exec(triangle)
 add_singlefile_exec(texture_test)
 add_singlefile_exec(frag_depth_test)
 add_singlefile_exec(compute_test)
+add_singlefile_exec(compute_ssbo_test)
