--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,3 +53,4 @@ add_singlefile_exec(texture_test)
 add_singlefile_exec(frag_depth_test)
 add_singlefile_exec(compute_test)
 add_singlefile_exec(compute_ssbo_test)
+add_singlefile_exec(compute_indirect_ssbo_test)
