--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,3 +57,4 @@ add_singlefile_exec(compute_indirect_ssbo_test)
 add_singlefile_exec(compute_share_test)
 
 add_singlefile_exec(smp_test)
+add_singlefile_exec(blit_test)
