--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,3 +59,4 @@ add_singlefile_exec(compute_share_test)
 add_singlefile_exec(smp_test)
 add_singlefile_exec(blit_test)
 add_singlefile_exec(texture_query_levels_test)
+add_singlefile_exec(enhanced_layouts_constexpr_test)
