--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,3 +61,4 @@ add_singlefile_exec(blit_test)
 add_singlefile_exec(texture_query_levels_test)
 add_singlefile_exec(enhanced_layouts_constexpr_test)
 add_singlefile_exec(enhanced_layouts_offset_test)
+add_singlefile_exec(enhanced_layouts_location_component_test)
